src/Screens/ReferenceList/index.module.scss
/* ... */
.addMoreTextStyle {
  font: normal normal medium 20px/34px Montserrat;
  letter-spacing: 0px;
  color: #7165e3;
  text-transform: uppercase;
}

.colorFileStyle {
  height: 25px !important;
  width: 25px !important;
  margin-right: 5px;
  object-fit: contain;
  cursor: pointer;
}

.colorFileStyle2 {
  height: 20px !important;
  width: 20px !important;
  object-fit: contain;
  cursor: pointer;
}

.colorFileStyle3 {
  margin-top: 5px;
  height: 17px !important;
  width: 17px !important;
  object-fit: contain;
  cursor: pointer;
}

.colorFileStyle4 {
  height: 17px !important;
  width: 17px !important;
  object-fit: contain;
  cursor: pointer;
}

.colorFileStyle5 {
  height: 22px !important;
  width: 22px !important;
  margin-right: 5px;
  object-fit: contain;
  cursor: pointer;
}

.colorFileStyle6 {
  height: 20px !important;
  width: 12px !important;
  object-fit: contain;
  cursor: pointer;
}

.industriesEntityCardStyle {
  max-height: calc(100vh - 250px);
  width: 56vw;
  overflow: scroll;
  box-shadow: 0px 3px 6px #00000029;
  border: 0.20000000298023224px solid #d9d9d9;
  border-radius: 10px;
  padding: 5px;
}

.tableHeaderIndustriesEntity {
  background: #afa9ef 0% 0% no-repeat padding-box;
  font-weight: medium;
  //margin-left: 50px;
  height: 55px;
  width: 100%;
  border-radius: 6px;
  display: flex;
  align-items: center;
  display: grid;
  grid-template-columns: 59% 15% 15% 10% 10%;
}

.tableHeaderTerminationReasons {
  background: #afa9ef 0% 0% no-repeat padding-box;
  font-weight: medium;
  height: 55px;
  width: 100%;
  border-radius: 6px;
  display: flex;
  align-items: center;
  display: grid;
  grid-template-columns: 59% 16% 15% 10%;
}

.tableHeaderIndustriesFontStyle {
  font: normal normal bold 12px/18px Montserrat;
  letter-spacing: 0px;
  color: #52575d;
  opacity: 1;
  text-align: left;
  margin-top: 10px;
  margin-left: 10px;
  width: 95%;
  min-height: fit-content;
}

.tableHeaderIndustriesFontStyle2 {
  font: normal normal bold 14px/20px Montserrat;
  letter-spacing: 0px;
  color: #52575d;
  opacity: 1;
  text-align: left;
  margin-top: 10px;
  margin-left: 30px;
}

.tableHeaderIndustriesFontStyle3 {
  font: normal normal bold 14px/20px Montserrat;
  letter-spacing: 0px;
  color: #52575d;
  opacity: 1;
  text-align: left;
  margin-top: 10px;
  margin-left: 20px;
}

.tableHeaderIndustriesFontStyle4 {
  font: normal normal bold 12px/20px Montserrat;
  letter-spacing: 0px;
  color: rgb(22, 22, 22);
  opacity: 1;
  text-align: left;
  margin-top: 10px;
  margin-left: 20px;
}

.tableHeaderIndustriesFontStyle6 {
  font: normal normal bold 14px/20px Montserrat;
  letter-spacing: 0px;
  color: #52575d;
  opacity: 1;
  text-align: left;
  margin-top: 10px;
}

.tableSubHeaderIndustriesFontStyle {
  font: normal 15px/20px Montserrat;
  letter-spacing: 0px;
  color: #494a51;
  opacity: 1;
  text-align: left;
  margin-top: 10px;
  margin-left: 10px;
}

.healthCareIndustriesHeader {
  background: #d3d0f6 0% 0% no-repeat padding-box;
  font-weight: normal;
  height: 50px;
  width: 100%;
  border-radius: 6px;
  margin-top: 2px;
  align-items: center;
  display: flex;
  display: grid;
  grid-template-columns: 5% 82% 6% 6%;
}

.holidayFolderHeader {
  background: #d3d0f6 0% 0% no-repeat padding-box;
  font-weight: normal;
  height: 45px;
  width: 99.5%;
  border-radius: 6px;
  margin-top: 2px;
  align-items: center;
  display: flex;
  display: grid;
  grid-template-columns: 3% 88% 5% 5%;
}

.contractedServiceHeader {
  background: #afa9ef 0% 0% no-repeat padding-box;
  font-weight: medium;
  height: 55px;
  width: 65vw;
  border-radius: 6px;
  display: flex;
  align-items: center;
  display: grid;
  grid-template-columns: 3% 47% 20% 20% 10%;
}

.terminationHeader {
  background: #d3d0f6 0% 0% no-repeat padding-box;
  font-weight: normal;
  height: 45px;
  width: 100%;
  border-radius: 6px;
  margin-top: 5px;
  align-items: center;
  display: flex;
  display: grid;
  grid-template-columns: 5% 75% 10% 5%;
}

.terminationHeader2 {
  background: #d3d0f6 0% 0% no-repeat padding-box;
  font-weight: normal;
  height: 45px;
  width: 98%;
  border-radius: 6px;
  margin-top: 1.5px;
  align-items: center;
  display: flex;
  display: grid;
  grid-template-columns: 3% 88% 5% 5%;
}

.healthCareTableData {
  background: #f5f5f8 0% 0% no-repeat padding-box;
  min-height: 50px;
  width: 98%;
  margin-left: 2%;
  border-radius: 6px;
  display: grid;
  align-items: center;
  margin-top: 5px;
  grid-template-columns: 61% 8% 18% 6% 5%;
}

.departmentTableData {
  background: #f5f5f8 0% 0% no-repeat padding-box;
  min-height: 50px;
  width: 96%;
  margin-left: 2%;
  border: 0.20000000298023224px solid #d7d4f7;
  border-radius: 6px;
  display: grid;
  align-items: center;
  margin-top: 4px;
  grid-template-columns: 3% 58% 15% 15% 5% 5%;
}

.terminationLayer3Card {
  background: #f5f5f8 0% 0% no-repeat padding-box;
  min-height: 50px;
  width: 98%;
  margin-left: 2%;
  border-radius: 6px;
  display: grid;
  align-items: center;
  margin-top: 5px;
  grid-template-columns: 3% 58% 15% 15% 5% 5%;
}

.absenseLayer3Card {
  background: #f5f5f8 0% 0% no-repeat padding-box;
  min-height: 50px;
  width: 98%;
  margin-left: 2%;
  border-radius: 6px;
  display: grid;
  align-items: center;
  margin-top: 5px;
  grid-template-columns: 3% 40% 35% 10% 8%;
}

.absenseLayer4Card {
  background: #f5f5f8 0% 0% no-repeat padding-box;
  min-height: 50px;
  width: 98%;
  margin-left: 2%;
  border-radius: 6px;
  display: grid;
  align-items: center;
  margin-top: 5px;
  grid-template-columns: 3% 42% 35% 10% 5%;
  border: 0.400000006px solid rgba(136, 126, 231, 0.6862745098);
}

.contractedServiceProviderCard {
  background: #f5f5f8 0% 0% no-repeat padding-box;
  min-height: 50px;
  width: 98%;
  margin-left: 2%;
  border-radius: 6px;
  display: flex;
  align-items: center;
  margin-top: 5px;
}
/* ... */

